<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_gradient" >

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="30sp"
        android:textColor="@color/titleColor"
        />

    <TextView
        android:id="@+id/lets_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_title"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif"
        android:textSize="30sp"
        android:textColor="@color/secondaryColor"
        />

    <Button
        android:id="@+id/camera_button"
        android:layout_width="155dp"
        android:layout_height="40dp"
        android:text="@string/camera"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lets_start"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_shape"
        />

    <Button
        android:id="@+id/gallery_button"
        android:layout_width="155dp"
        android:layout_height="40dp"
        android:text="@string/gallery"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera_button"
        android:layout_marginTop="22dp"
        android:background="@drawable/button_shape"
        />

</android.support.constraint.ConstraintLayout>