<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".DisplayResultActivity">


    <ImageView
        android:id="@+id/outputImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/image_background"
        app:srcCompat="@drawable/background_gradient" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="155dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_shape"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outputImage"
        android:layout_marginTop="100dp"/>

    <Button
        android:id="@+id/editButton"
        android:layout_width="155dp"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_shape"
        android:text="@string/Edit"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saveButton"
        android:layout_marginTop="22dp" />

    <Button
        android:id="@+id/newButton"
        android:layout_width="155dp"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_shape"
        android:text="@string/again"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editButton"
        android:layout_marginTop="22dp" />

</androidx.constraintlayout.widget.ConstraintLayout>